--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "gatsby": "^2.29.3",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-manifest": "^2.9.1",
+    "gatsby-plugin-netlify-cms": "^4.10.0",
     "gatsby-plugin-offline": "^3.7.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-plugin-webfonts": "^1.1.3",
     "gatsby-source-filesystem": "^2.8.1",
-    "gatsby-source-strapi": "^0.0.12",
     "gatsby-transformer-sharp": "^2.9.0",
+    "netlify-cms-app": "^2.14.18",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
